--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ardor</title>
+      <!--=============================
+    PLUGINS DE CSS          
+    ==============================-->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-    <!-- BOOTSTRAP 4 -->
-    <link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap.min.css">
+
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/main.css">
+    <!--=============================
+     PLUGINS DE JS        
+    ==============================-->
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
     <!-- SCROOLL REVEAL -->
     <script src="js/ScrollReveal.js"></script>
 
